<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="page_request_exceeding_warning">Page requestes has been exceeded</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_settings_header">Advanced Search Options</string>
    <string name="spinner_prompt">Select</string>
    
    <string name="image_size_input_label">Image Size</string>
    <string name="color_filter_input_label">Color Filter</string>
    <string name="image_type_input_label">Image Type</string>
    <string name="site_filter_input_label">Site Filter</string>
    
    <string-array name="image_sizes">
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    
    <string-array name="color_filters">
        <item>blue</item>
        <item>brown</item>
        <item>green</item>
        <item>pink</item>
        <item>red</item>
        <item>yellow</item>
        <item>purple</item>
    </string-array>
    
    <string-array name="image_types">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
