<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/mtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/activity_settings_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="93dp"
        android:layout_toRightOf="@+id/tvImageType"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="57dp"
        android:text="@string/color_filter_input_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mtTitle"
        android:layout_below="@+id/mtTitle"
        android:layout_marginTop="42dp"
        android:text="@string/image_size_input_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etSiteFilter"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:layout_alignLeft="@+id/tvImageType"
        android:text="@string/site_filter_input_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spnrImageType"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSiteFilter"
        android:layout_below="@+id/spnrColorFilter"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp"
        android:entries="@array/image_types"
        android:prompt="@string/spinner_prompt" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvImageSize"
        android:layout_alignTop="@+id/spnrImageType"
        android:layout_marginTop="22dp"
        android:text="@string/image_type_input_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spnrColorFilter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnrImageType"
        android:layout_below="@+id/spnrImageSize"
        android:entries="@array/color_filters"
        android:prompt="@string/spinner_prompt" />

    <Spinner
        android:id="@+id/spnrImageSize"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnrColorFilter"
        android:layout_below="@+id/mtTitle"
        android:layout_marginTop="27dp"
        android:entries="@array/image_sizes"
        android:prompt="@string/spinner_prompt" />

</RelativeLayout>
